# django-toolshed

./: .coveragerc  .drone.yml  .gitignore  .pylintrc  MANIFEST.in  README.md  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py
.vim/: coc-settings.json
django_toolshed/: apps.py  celery_auto_app.py  celery_urls.py  celery_views.py  mixins.py  signals.py  urls.py
django_toolshed/management/commands/: create_management_command.py  list_apps.py  list_commands.py  list_users.py
tests/: admin.py  celery_app.py  models.py  settings.py  test_celery_urls.py  test_mixins.py  urls.py
tests/migrations/: 0001_initial.py
