[tool.poetry]
name = "django-toolshed"
version = "0.0.1"
description = ""
authors = ["Dani Hodovic <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1"
ipython_genutils = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.2"
pytest-clarity = "0.2.0a1"
pytest-cov = "2.10.0"
pytest-django = "4.1.0"
coverage = "5.5"
django-coverage-plugin = "1.8.0"
black = "20.8b1"
mypy = "0.782"
mypy-extensions = "0.4.3"
pylint = "^2.7"
pylint-django = "2.3.0"
pylint-plugin-utils = "0.6"
ptipython = "1.0.1"
ptpython = "3.0.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
